fix: colorcomponent spacing

--- a/src/styles/gooey.scss
+++ b/src/styles/gooey.scss
@@ -1638,7 +1638,7 @@ input.gooey-search-input {
 			display: flex;
 			flex-direction: row;
 			justify-content: space-between;
-			gap: 0.75rem;
+			gap: 0.25rem;
 
 			width: 100%;
 			margin: 0.25rem 0;
